--- a/public/home.html
+++ b/public/home.html
@@ -18,11 +18,6 @@
   <link href="css/imagehover.min.css" rel="stylesheet" media="all">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    /* body {
-      background-image: url("img/circle.png");
-    } */
-  </style>
 </head>
 
 <body>
@@ -157,17 +152,17 @@
     </div>
   </div>
   <!-- grid end -->
-  <footer class="page-footer font-small stylish-color-dark pt-4" id="footer">
+  <footer class="page-footer font-small stylish-color-dark pt-3 fixed-bottom" id="footer">
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-facebook-f fa-lg"></i></a></li>
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-google-plus-g fa-lg"></i></a></li>
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-twitter fa-lg"></i></a></li>
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab pink-text fa-instagram fa-lg"></i></a></li>
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-linkedin-in fa-lg"> </i></a></li>
-      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-pinterest-p fa-lg"></i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-facebook-f fa-lg"></i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-google-plus-g fa-lg"></i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-twitter fa-lg"></i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-instagram fa-lg"></i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-linkedin-in fa-lg"> </i></a></li>
+      <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-github fa-lg"></i></a></li>
     </ul>
-    <div class="footer-copyright text-center py-3 mt-4">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
+    <div class="footer-copyright text-center py-3 mt-3">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
   </footer>
   <!-- End of project-->
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
