--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Home</title>
+  <title>HOME | Virtual Police Station</title>
   <!-- VPS icon -->
   <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
   <!-- Font Awesome -->
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Image hover -->
   <link href="css/imagehover.min.css" rel="stylesheet" media="all">
-  <!-- Your custom styles (optional) -->
+  <!-- custom styles -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -55,14 +55,13 @@
           <!-- Card image -->
           <figure class="imghvr-fold-up"><img src="img/note_taking.png" alt="example-image">
             <figcaption>
-              <h3></h3>
               <p>Register a FIR</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body">
             <!-- Button -->
-            <a href="newfir.html" class="btn btn-primary mt-5" id="newFirBtn">New FIR</a>
+            <a href="newfir.html" class="btn btn-primary mt-3" id="newFirBtn">New FIR</a>
           </div>
         </div>
       </div>
@@ -71,14 +70,13 @@
           <!-- Card image -->
           <figure class="imghvr-slide-up"><img src="img/notes.png" alt="example-image">
             <figcaption>
-              <h3></h3>
               <p>See FIR status</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body">
             <!-- Button -->
-            <a href="firstatus.html" class="btn btn-primary mt-5" id='firStatus'>FIR Status</a>
+            <a href="firstatus.html" class="btn btn-primary mt-3" id='firStatus'>FIR Status</a>
           </div>
         </div>
       </div>
@@ -87,14 +85,13 @@
           <!-- Card image -->
           <figure class="imghvr-slide-up"><img src="img/personal_data.png" alt="example-image">
             <figcaption>
-              <h3></h3>
               <p>Take a look at your area's criminal records</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body">
             <!-- Button -->
-            <a href="#" class="btn btn-primary mt-5" id="pastIncidents">Past incidents</a>
+            <a href="#" class="btn btn-primary mt-3" id="pastIncidents">Past incidents</a>
           </div>
         </div>
       </div>
@@ -106,14 +103,14 @@
           <!-- Card image -->
           <figure class="imghvr-slide-up"><img src="img/checklist.png" alt="example-image">
             <figcaption>
-              <h3></h3>
+
               <p>Hassle free NOC</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body">
             <!-- Button -->
-            <a href="#" class="btn btn-primary mt-5" id="applyNoc">Apply NOC</a>
+            <a href="applynoc.html" class="btn btn-primary mt-3" id="applyNoc">Apply NOC</a>
           </div>
         </div>
       </div>
@@ -122,14 +119,13 @@
           <!-- Card image -->
           <figure class="imghvr-slide-up"><img src="img/chat.png" alt="example-image">
             <figcaption>
-              <h3></h3>
               <p>Clear your doubts, get help.</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body">
             <!-- Button -->
-            <a href="vpschat.html" class="btn btn-primary mt-5">VPS Chat</a>
+            <a href="vpschat.html" class="btn btn-primary mt-3">VPS Chat</a>
           </div>
         </div>
       </div>
@@ -138,21 +134,20 @@
           <!-- Card image -->
           <figure class="imghvr-slide-up"><img src="img/calendar.png" alt="example-image">
             <figcaption>
-              <h3></h3>
               <p>Book appointment with officers</p>
-            </figcaption><a href="javascript:;"></a>
+            </figcaption>
           </figure>
           <!-- Card content -->
           <div class="card-body card-body-cascade">
             <!-- Button -->
-            <a href="#" class="btn btn-primary mt-5" id="appointment">Appointment</a>
+            <a href="#" class="btn btn-primary mt-3" id="appointment">Appointment</a>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- grid end -->
-  <footer class="page-footer font-small stylish-color-dark pt-3 fixed-bottom" id="footer">
+  <footer class="page-footer font-small stylish-color-dark pt-4" id="footer">
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-facebook-f fa-lg"></i></a></li>
@@ -165,12 +160,14 @@
     <div class="footer-copyright text-center py-3 mt-3">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
   </footer>
   <!-- End of project-->
+
+  <!-- Bootstrap jQuery -->
+  <script defer type="text/javascript" src="js/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
-  <!-- Bootstrap jQuery -->
-  <script defer type="text/javascript" src="js/jquery.min.js"></script>
+
   <!-- Bootstrap tooltips -->
   <script defer type="text/javascript" src="js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
@@ -178,8 +175,8 @@
   <!-- MDB core JavaScript -->
   <script defer type="text/javascript" src="js/mdb.min.js"></script>
   <!-- custom scripts -->
-  <script defer type="text/javascript" src="js/firebaseConfig.js"></script>
-  <script src="js/index.js"></script>
+  <script type="text/javascript" src="js/firebase-config.js"></script>
+  <script defer src="js/index.js"></script>
   <script>window.onload = function () { auth.onAuthStateChanged(user => { if (user) { } else { window.location.href = 'index.html'; } }); }</script>
 </body>
 
