--- a/public/firstatus.html
+++ b/public/firstatus.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FIR status</title>
+    <title>FIR Status</title>
     <!-- VPS icon -->
     <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
     <!-- Font Awesome -->
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
-    <!-- Your custom styles (optional) -->
+    <!-- custom styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -24,14 +24,15 @@
     <nav class="navbar navbar-dark primary-color navbar-expand-lg fixed-top">
         <a href="#" class="navbar-brand">Virtual Police Station</a>
     </nav>
-    <div class="container justify-content-center" id="firStatusContainer">
+    <div class="contain" id="firStatusContainer">
         <div class="d-flex justify-content-center">
             <div class="spinner-border text-primary" id="loader" role="status">
-                <!-- <span class="sr-only">Loading...</span> -->
+                <span class="sr-only">Loading...</span>
             </div>
         </div>
         <div id="userDetails"></div>
-        <div id='firStatement'></div>
+        <div id="firStatement"></div>
+        <!-- <div><span>Statement: </span><p id="statement"></p></div> -->
     </div>
     <!-- Project ends here-->
 
@@ -48,7 +49,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Your custom scripts (optional) -->
+    <!-- custom scripts -->
     <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
