--- a/public/newfir.html
+++ b/public/newfir.html
@@ -14,32 +14,45 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
-    <!-- Your custom styles (optional) -->
+    <!-- custom styles -->
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {overflow-x: hidden;}
+    </style>
 </head>
 
 <body>
     <!-- Project starts here-->
-    <div class="container my-4 z-depth-2" style="width:fit-content;background-color: white;">
-        <form class="py-5">
-            <p class="h4 mb-4 text-center">Register FIR</p>
-            <!-- 
-            <input type="text" id="name" class="form-control mb-2" placeholder="Name">
-            <input type="number" id="signInEmail" class="form-control mb-2" placeholder="Aadhaar Number">
-            <input type="datetime-local" id="signInEmail" class="form-control mb-2">
-            <input type="number" id="signInEmail" class="form-control mb-2" placeholder="Mobile Number"> -->
-            <textarea class="input-border" name="" id="statement" cols="40" rows="4" placeholder="Describe your concern"></textarea>
-            <div class="my-2">
-                <label for="evidence" class="d-inline-block mr-2">Evidence:</label>
-                <input type="file" id="evidence" class="d-inline-block" multiple>
-            </div>
-            <input type="number" id="textInput" class="form-control mb-2" placeholder="Enter OTP">
-            <a href="#" class="btn btn-primary mr-4 btn-md mb-2">Request OTP</a>
-            <a href="#" class="btn btn-primary btn-md mb-2">Verify</a>
-            <a class="btn btn-primary btn-block my-4" id="newFir">Submit</a>
-        </form>
-    </div>
-    <footer class="page-footer font-small stylish-color-dark pt-3 fixed-bottom" id="footer">
+    <form class="container my-md-4 p-5 z-depth-1" style="background-color: white; max-width: 600px;">
+        <h4 class="text-center">Register FIR</h4>
+        <div class="md-form">
+            <input type="text" class="form-control" id="crimePlace">
+            <label for="crimePlace">Place of Crime</label>
+        </div>
+        <div class="md-form">
+            <input type="text" class="form-control" id="criminalName">
+            <label for="criminalName">Name of Criminal</label>
+        </div>
+        <div class="md-form">
+            <input type="text" class="form-control" id="criminalAddress">
+            <label for="criminalAddress">Address of Criminal</label>
+        </div>
+        <div class="md-form">
+            <textarea class="form-control md-textarea" id="statement" rows="4"></textarea>
+            <label for="statement">Statement</label>
+        </div>
+        <input type="file" class="" id="evidence" multiple>
+        <input type="datetime-local" class="mt-3 form-control" id="dateTime">
+        <div class="md-form">
+            <input type="number" class="form-control mb-2" id="otp">
+            <label for="otp">Enter OTP</label>
+        </div>
+        <a href="#" class="btn btn-primary mr-4 btn-md mb-2 px-3">Request OTP</a>
+        <a href="#" class="btn btn-primary btn-md mb-2 px-3">Verify</a>
+        <a class="btn btn-primary btn-block my-4" id="newFir">Submit</a>
+    </form>
+    <!-- </div> -->
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-md-2" id="footer">
         <!-- Social buttons -->
         <ul class="list-unstyled list-inline text-center">
             <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab fa-facebook-f fa-lg"></i></a></li>
@@ -67,7 +80,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Your custom scripts (optional) -->
+    <!-- Custom scripts -->
     <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
